@@ -1,8 +1,6 @@
-Package: linux-image-@abiname@@localversion@-dbg
+Package: linux-image-@abiname@@localversion@-dbgsym
 Build-Profiles: <!stage1>
 Depends: ${misc:Depends}
 Section: debug
 Priority: extra
-Description: Debugging symbols for Linux @abiname@@localversion@
- This package provides the detached debugging symbols for the Linux kernel
- and modules in linux-image-@abiname@@localversion@.
+Description: Debug symbols for linux-image-@abiname@@localversion@
