@@ -19,6 +19,8 @@ linux (4.7~rc7-1~exp1) UNRELEASED; urgency=medium
     doesn't like to see it in debian/control
   * debian/lib/python/debian_linux/debian.py: Handle packages with only short
     descriptions
+  * Change names and descriptions of linux-image debug symbol packages to match
+    debhelper
 
   [ Bastian Blank ]
   * Mark debug symbols packages to move them into the debug archive.
